# Automated-UI-flow-maker

./: .gitignore  main.py  pyproject.toml  requirements.txt
config/: crawler.py  logger.py  settings.py
example/: README.md  config.py  crawler.py  extractor.py  graph.py  llm_enricher.py  run.py  state.py
output/: graph.html  ui_flow.json
src/config/: Config.py  Logger.py
src/core/a_star_graph_search/: search.py
src/core/crawler/: crawl.py
src/core/extras/: search.py  visualize.py
src/core/fingerprinting/: fingerprint_page.py
src/core/graph_builder/: graph.py
src/core/llm_enricher/: llm_config.py
src/core/page_action_extraction/: extractor.py  fingerprint_page.py
