[project]
name = "automated-ui-flow-maker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi[all]>=0.135.1",
    "ipykernel>=7.2.0",
    "langchain-openai>=1.1.11",
    "openai>=2.29.0",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
    "pyvis>=0.3.2",
]
